--- a/JavaScript/demo/demo1.html
+++ b/JavaScript/demo/demo1.html
@@ -90,5 +90,25 @@
 				return s.substring(0,1).toUpperCase() + s.substring(1).toLowerCase();
 			});
 		}
+		//filter
+		var arr = [1,2,3,4,5,6,7,10];
+		var r = arr.filter(function(x)) {
+			return x % 2 !==0;
+		};
+		r; //[1,3,5,7]
+
+		//sort()
+		['Google', 'Apple', 'Microsoft'].sort(); // ['Apple', 'Google', 'Microsoft'];
+
+		var arr = [10, 20, 1,2];
+		arr.sort(function(x, y)) {
+			if (x>y) {
+				return 1;
+			}
+			if (x<y) {
+				return -1;
+			}
+			return 0;
+		};	//[1,2,10,20] 正序排列
 </head>
 </html>
