--- a/JavaScript/demo/demo1.html
+++ b/JavaScript/demo/demo1.html
@@ -110,5 +110,60 @@
 			}
 			return 0;
 		};	//[1,2,10,20] 正序排列
+
+		function sum(arr) {
+			return arr.reduce(function(x, y) {
+				return x + y;
+			});
+		};
+		sum([1,2,3,4,5]);
+
+		function lazy_sum(arr) {
+			var sum = function() {
+				return arr.reduce(function(x, y) {
+					return x + y;
+				});
+			};
+			return sum;
+		};
+		var f = lazy_sum([1,2,3,4,5]);	//function sum
+		f();	//15
+
+		function count() {
+		    var arr = [];
+		    for (var i=1; i<=3; i++) {
+		        arr.push(function () {
+		            return i * i;
+		        });
+		    }
+		    return arr;
+		}
+
+		var results = count();
+		var f1 = results[0];
+		var f2 = results[1];
+		var f3 = results[2];
+
+		function count() {
+			var arr = [];
+			for (var i=1; i<=3; i++) {
+				arr.push((function (n) {
+					return function() {
+						return n*n;
+					}
+				})(i));
+			}
+		};	//这里用了一个“创建一个匿名函数并立刻执行”的语法。
+		(funtion(x) {return x * x}){3};
+
+		funtion make_pow(x) {
+			return function(n) {
+				return Math.pow(n, x);
+			}
+		};
+		var pow2 = make_pow(2);
+		var pow3 = make_pow(3);
+		pow2(5);
+		pow3(7);
 </head>
 </html>
